tests/snapshots/integration__integration_tests__internal_flag__complete_with_internal_flag.snap
---
source: tests/integration_tests/internal_flag.rs
info:
  program: wt
  args:
    - "--internal"
    - complete
    - wt
    - switch
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpOXsiBo/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
feature
main

----- stderr -----
