tests/snapshots/integration__integration_tests__internal_flag__config_list_with_internal_flag.snap
---
source: tests/integration_tests/internal_flag.rs
info:
  program: wt
  args:
    - "--internal"
    - config
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpskwBN8
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpy2lPIB/test-config.toml
    XDG_CONFIG_HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpskwBN8/.config
---
success: true
exit_code: 0
----- stdout -----
⚪ Global Config: [1m[TEMP_HOME]/.config/worktrunk/config.toml[0m
[40m [0m  worktree-path = [32m"../{main-worktree}.{branch}"[0m

⚪ Project Config: [1m[REPO]/.config/wt.toml[0m
💡 [2mNot found[0m

----- stderr -----
